--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,43 +40,51 @@
         margin-top: 0px ;
     }
     #banner .banner-img img {
-        margin-left: -15px;
+        margin-left: 15%;
+        width: 70%;
     }
     #banner .banner-content {
-        padding-top: 0 ;
-    }
-    #banner .banner-content h6 {
-        font-size: 16px ;
-        margin-left: 0px ;
+        padding-top: 30px ;
+        text-align: center;
     }
     #banner .banner-content h1 {
-        font-size: 150px ;
-        margin: -24px -7px ;
+        font-size: 175px ;
+        margin: -24px 0px ;
     }
     #banner .banner-content p {
         font-size : 12px;
-        margin-top : 10px;
-        margin-right : 40px;
-        padding : 0;
+        margin-right: 0;
     }
     #banner .banner-content a {
-        margin-left: 17%;
+        margin-left: 0;
     }
     .button {
         padding: 4px 22px;
         font-size: 20px;
     }
+    .heading h2{
+        font-size: 36px;
+    }
     #game .entry-part {
-        transform: translateY(-50%);
+        transform: translateY(-15%);
+        width: 100%;
+        margin: auto;
+        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 100%);
     }
     #game .entry-part .box {
         padding: 10px 0;
+        margin-bottom: 10px;
     }
     #game .entry-part .box h2 {
         font-size: 32px;
     }
-    #game .entry-part .box h4 {
-        font-size: 24px;
+    #game .game-img .overlay .content h4 {
+        font-size: 16px;
+        margin: 18px 0;
+    }
+    #game .game-img .overlay .content a {
+        padding: 7px 14px;
+        font-size: 16px;
     }
     #game .entry-part .box p {
         font-size: 12px;
@@ -93,22 +101,15 @@
         width: 65%;
     }
     #spin .spin-content {
-        padding-top: 45px;
-        margin-left: 66px;
-    }
-    #spin .spin-content .heading {
-        margin-bottom: 35px;
-        margin-left: -40px;
+        padding-top: 40px;
+        margin-left: 0px;
         text-align: center;
     }
     #pricing {
         padding-bottom: 60px;
     }
     #pricing .price-box {
-        margin-top: 55px;
-    }
-    #pricing .price-box .choose {
-        left: 37%;
+        margin-top: 75px;
     }
     #pricing .price-box .choose a {
         padding: 10px 24px;
@@ -131,20 +132,24 @@
         margin-top: 10px;
     }
     #question .tournament .timer {
-        padding-left: 130px;
-        margin-left: 80px;
+        padding-left: 140px;
     }
     #payment form {
         margin-bottom: 30px;
     }
     #payment .p-list ul li {
-        margin-right: 10px;
+        margin-right: 30px;
+        margin-top: 15px;
     }
     #footer .jackpot{
         margin-bottom: 60px;
     }
     #footer .link ul li {
         margin-bottom: 5px;
+    }
+    .back_to_top {
+        right: 10px;
+        bottom: 54px;
     }
 }
 /* extra small end */
@@ -185,40 +190,36 @@
     }
     #banner{
         padding-top: 140px;
-        padding-bottom: 135px;
+        padding-bottom: 130px;
     }
     #banner .banner-img {
         margin-top: 0px ;
     }
     #banner .banner-img img {
-        margin-left: -15px;
+        margin-left: 15%;
+        width: 70%;
     }
     #banner .banner-content {
-        margin-left: 25px;
-    }
-    #banner .banner-content {
-        padding-top: 0 ;
-    }
-    #banner .banner-content h6 {
-        font-size: 16px ;
-        margin-left: 0px ;
+        padding-top: 30px ;
+        text-align: center;
     }
     #banner .banner-content h1 {
-        font-size: 150px ;
-        margin: -24px -7px ;
+        font-size: 220px ;
+        margin: -24px 0px ;
     }
     #banner .banner-content p {
-        font-size : 12px;
-        margin-top : 10px;
-        margin-right : 25px;
-        padding : 0;
+        font-size : 16px;
+        margin-right: 0;
     }
     #banner .banner-content a {
-        margin-left: 40px;
+        margin-left: 0;
     }
     .button {
-        padding: 4px 22px;
-        font-size: 20px;
+        padding: 6px 26px;
+        font-size: 24px;
+    }
+    .heading h2{
+        font-size: 36px;
     }
     #game .entry-part {
         transform: translateY(-50%);
@@ -235,6 +236,17 @@
     #game .entry-part .box p {
         font-size: 12px;
     }
+    #game .game-img .overlay .content h4 {
+        font-size: 24px;
+        margin: 18px 0;
+    }
+    #game .game-img .overlay .content a {
+        padding: 8px 15px;
+        font-size: 20px;
+    }
+    #game .entry-part .box p {
+        font-size: 12px;
+    }
     #spin {
         padding-top: 10px;
         padding-bottom: 40px;
@@ -247,12 +259,8 @@
         width: 65%;
     }
     #spin .spin-content {
-        padding-top: 45px;
-        margin-left: 66px;
-    }
-    #spin .spin-content .heading {
-        margin-bottom: 35px;
-        margin-left: -40px;
+        padding-top: 40px;
+        margin-left: 0px;
         text-align: center;
     }
     #pricing {
@@ -260,6 +268,10 @@
     }
     #pricing .price-box {
         margin-top: 55px;
+    }
+    #pricing .price-box .choose a {
+        font-size: 18px;
+        padding: 5px 15px;
     }
     #question {
         padding-top: 50px;
@@ -359,6 +371,9 @@
     #banner .banner-content a {
         margin-left: 65px;
     }
+    .heading h2{
+        font-size: 36px;
+    }
     .button {
         padding: 6px 28px;
         font-size: 24px;
@@ -398,12 +413,8 @@
         width: 65%;
     }
     #spin .spin-content {
-        padding-top: 45px;
-        margin-left: 66px;
-    }
-    #spin .spin-content .heading {
-        margin-bottom: 35px;
-        margin-left: -40px;
+        padding-top: 40px;
+        margin-left: 0px;
         text-align: center;
     }
     #pricing {
@@ -411,6 +422,10 @@
     }
     #pricing .price-box {
         margin-top: 55px;
+    }
+    #pricing .price-box .choose a {
+        font-size: 20px;
+        padding: 7px 20px;
     }
     #question {
         padding-top: 50px;
@@ -442,6 +457,13 @@
     #banner .banner-content a {
         margin-left: 140px;
     }
+    .heading h2{
+        font-size: 36px;
+    }
+    #pricing .price-box .choose a {
+        font-size: 20px;
+        padding: 7px 20px;
+    }
     #question .tournament .timer {
         padding-left: 128px;
         font-size: 18px;
@@ -459,9 +481,6 @@
 /*  large end */
 /*  extra large start */
 @media (min-width: 1200px) and (max-width: 1399px){
-    #pricing .price-box .choose {
-        left: 27%;
-        bottom: -4%;
-    }
+
 }
 /*  extra large end */
