--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ img {
   vertical-align: middle;
 }
 /* common css*/
-.heading {
+.heading h2 {
   font-family: 'Anton', sans-serif;
   font-size: 48px;
   text-transform: uppercase;
@@ -400,8 +400,9 @@ img {
 }
 #pricing .price-box .choose {
   position: absolute;
-  left: 23%;
-  bottom: -4%;
+  left: 50%;
+  bottom: -20px;
+  transform: translateX(-50%);
 }
 #pricing .price-box .choose a {
   color: #ffffff;
