--- a/less/style.less
+++ b/less/style.less
@@ -41,7 +41,7 @@ img{
 @cl4:#9e4efc;
 @over:hsla(264, 100%, 10%, 0.85);
 
-.heading{
+.heading h2{
     font-family: @hf;
     font-size: 48px;
     text-transform: uppercase;
@@ -396,10 +396,14 @@ img{
         }
         .choose{
             position: absolute;
-            left: 23%;
-            bottom: -4%;
+            left: 50%;
+            bottom: -20px;
+            transform: translateX(-50%);
             a{
                 color: #ffffff;
+                .button{
+
+                }
             }
         }
     }
